# metrics

./: Cargo.toml  README.md  metric_cloudwatch_result.json
fc_per_dev_metrics/: Cargo.toml  README.md  block_metrics.json  metrics.json  metrics_in_emf.json  metricsd.json  net_metrics.json  vsock_metrics.json
fc_per_dev_metrics/src/: main.rs  metrics.rs  netdevice.rs
simple_emf/: README.md
simple_otlp_adot/: Cargo.toml  README.md
simple_otlp_adot/src/: main.rs  main2.rs
simple_otlp_stdout/: Cargo.toml  README.md  otlp.json
simple_otlp_stdout/src/: main.rs
src/: main.rs
