[package]
name = "simple-otlp-adot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
once_cell = "1.17"
opentelemetry_api = { version = "0.20", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.20" , features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = { version = "0.12.0" }
tokio = { version = "1.0", features = ["full"] }
opentelemetry-appender-log = { version = "0.1", default-features = false}
log = {version = "0.4.17"}
