[package]
name = "simple-otlp-stdout"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
opentelemetry_api = { version = "0.20", features = ["metrics"] }
opentelemetry_sdk = { version = "0.20" , features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.1", features = ["metrics"]}
tokio = { version = "1.0", features = ["full"] }
